# windfish

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tui/: Cargo.toml
tui/src/: main.rs
