[package]
name = "windfish-tui"
version = "0.1.0"
edition = "2024"
authors = ["git@qrsnap.io"]
description = "TUI editor for Bitcoin mempool.dat files"

[[bin]]
name = "windfish-tui"
path = "src/main.rs"

[dependencies]
windfish = { path = ".." }
bitcoin = "0.32.8"
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
hex = "0.4"
